style: fix figure width not fit with content

--- a/themes/nitpum-blog/assets/scss/modules/post/_index.scss
+++ b/themes/nitpum-blog/assets/scss/modules/post/_index.scss
@@ -31,6 +31,7 @@
 
   figure {
     margin: 0;
+		width: fit-content;
   }
 
   img {
